@@ -12,14 +12,12 @@ import org.folio.rest.jaxrs.model.SubscriptionDefinition;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 
-import java.util.Arrays;
-import java.util.Collections;
-
 import static org.folio.rest.jaxrs.model.MessagingModule.ModuleRole.PUBLISHER;
 import static org.folio.rest.jaxrs.model.MessagingModule.ModuleRole.SUBSCRIBER;
-import static org.hamcrest.CoreMatchers.anyOf;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.is;
+
+import java.util.List;
 
 @RunWith(VertxUnitRunner.class)
 public class MessagingModulesApiTest extends AbstractRestTest {
@@ -38,7 +36,7 @@ public class MessagingModulesApiTest extends AbstractRestTest {
 
     String moduleId = "test-module-1.0.0";
     PublisherDescriptor publisherDescriptor = new PublisherDescriptor()
-      .withEventDescriptors(Collections.singletonList(createdEventDescriptor))
+      .withEventDescriptors(List.of(createdEventDescriptor))
       .withModuleId(moduleId);
 
     RestAssured.given()
@@ -47,7 +45,7 @@ public class MessagingModulesApiTest extends AbstractRestTest {
       .when()
       .post(EVENT_TYPES_PATH + DECLARE_PUBLISHER_PATH)
       .then()
-      .statusCode(anyOf(is(HttpStatus.SC_CREATED), anyOf(is(HttpStatus.SC_INTERNAL_SERVER_ERROR))));
+      .statusCode(HttpStatus.SC_CREATED);
 
     RestAssured.given()
       .spec(spec)
@@ -75,7 +73,7 @@ public class MessagingModulesApiTest extends AbstractRestTest {
       .withCallbackAddress("/callback-path");
 
     SubscriberDescriptor subscriberDescriptor = new SubscriberDescriptor()
-      .withSubscriptionDefinitions(Arrays.asList(subscriptionDefinition))
+      .withSubscriptionDefinitions(List.of(subscriptionDefinition))
       .withModuleId(moduleId);
 
     RestAssured.given()
